--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
+
+body {
+    font-family: "Playwrite GB S", cursive;
+    font-optical-sizing: auto;
+}
+
