--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
 
-body {
-    font-family: "Playwrite GB S", cursive;
-    font-optical-sizing: auto;
+@theme {
+    --font-open-sans: "Open Sans", sans-serif;
+    --font-bubblegum-sans: "Bubblegum Sans", sans-serif;
 }
 
+@layer base {
+    body {
+        @apply relative font-open-sans not-italic;
+        font-optical-sizing: auto;
+    }
+}
+
+@layer utilities {
+    .absolute-center {
+        @apply absolute left-1/2 -translate-x-1/2 -translate-y-1/2;
+    }
+}
+
+@layer components {
+    .btn-hero {
+        @apply cursor-pointer text-slate-50 bg-yellow-700 px-5 py-3 shadow-md rounded-full font-semibold;
+    }
+
+    .sparkle {
+        @apply fill-rose-600/50;
+    }
+}
+
+#wave {
+  position: relative;
+  height: 70px;
+  width: 600px;
+  background: #e0efe3;
+}
+
+#wave:before {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 340px;
+  height: 80px;
+  background-color: white;
+  right: -5px;
+  top: 40px;
+}
+
+#wave:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+  width: 300px;
+  height: 70px;
+  background-color: #e0efe3;
+  left: 0;
+  top: 27px;
+}
