--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,21 @@
         height: 150px;
     }
 }
+
+/* HTML: <div class="zig-zag-box"></div> */
+.zig-zag-box {
+  --s: 18px;  /* control the size of the spikes */
+  --w: 350px; /* preferred image width */
+  
+  width: round(var(--w),4*var(--s)); 
+  aspect-ratio: 1;
+  object-fit: cover;
+  padding: calc(2*var(--s));
+  box-sizing: border-box;
+  --_m:#0000 0 calc(2*atan(.5)),#000 0 50%;
+  mask:
+    repeating-conic-gradient(from atan(2) at 50% var(--s),var(--_m))
+     calc(2*var(--s)) calc(-1*var(--s))/calc(4*var(--s)) 100% intersect,
+    repeating-conic-gradient(from atan(-.5) at var(--s),var(--_m))
+     calc(-1*var(--s)) calc(2*var(--s))/100% calc(4*var(--s));
+}
